git-svn-id: http://svn.jamesgrafton.com/recipe-shopper/AdventureUrban/trunk@213 6dc030ff-0281-0410-8a41-8174dcc5abea

--- a/iPhone/Classes/AdventureView.xib
+++ b/iPhone/Classes/AdventureView.xib
@@ -113,10 +113,7 @@
 							<int key="NSfFlags">16</int>
 						</object>
 						<reference key="IBUIHighlightedTitleColor" ref="972403178"/>
-						<object class="NSColor" key="IBUINormalTitleColor">
-							<int key="NSColorSpace">1</int>
-							<bytes key="NSRGB">MC4xOTYwNzg0MzQ2IDAuMzA5ODAzOTMyOSAwLjUyMTU2ODY1NgA</bytes>
-						</object>
+						<reference key="IBUINormalTitleColor" ref="972403178"/>
 						<reference key="IBUINormalTitleShadowColor" ref="860597789"/>
 						<object class="NSCustomResource" key="IBUINormalBackgroundImage">
 							<string key="NSClassName">NSImage</string>
@@ -309,8 +306,9 @@ dGFydGluZyBMb2NhdGlvbjoKCgo</string>
 						<reference key="IBUITextColor" ref="950065441"/>
 						<reference key="IBUIHighlightedColor" ref="972403178"/>
 						<int key="IBUIBaselineAdjustment">1</int>
+						<bool key="IBUIAdjustsFontSizeToFit">NO</bool>
 						<float key="IBUIMinimumFontSize">10</float>
-						<int key="IBUINumberOfLines">0</int>
+						<int key="IBUINumberOfLines">20</int>
 					</object>
 					<object class="IBUIImageView" id="619298980">
 						<reference key="NSNextResponder" ref="155334720"/>
@@ -498,6 +496,14 @@ dGFydGluZyBMb2NhdGlvbjoKCgo</string>
 						<reference key="destination" ref="640665228"/>
 					</object>
 					<int key="connectionID">36</int>
+				</object>
+				<object class="IBConnectionRecord">
+					<object class="IBCocoaTouchOutletConnection" key="connection">
+						<string key="label">delegate</string>
+						<reference key="source" ref="281096869"/>
+						<reference key="destination" ref="841351856"/>
+					</object>
+					<int key="connectionID">37</int>
 				</object>
 			</object>
 			<object class="IBMutableOrderedSet" key="objectRecords">
@@ -721,7 +727,7 @@ dGFydGluZyBMb2NhdGlvbjoKCgo</string>
 				</object>
 			</object>
 			<nil key="sourceID"/>
-			<int key="maxID">36</int>
+			<int key="maxID">37</int>
 		</object>
 		<object class="IBClassDescriber" key="IBDocument.Classes">
 			<object class="NSMutableArray" key="referencedPartialClassDescriptions">
@@ -880,6 +886,20 @@ dGFydGluZyBMb2NhdGlvbjoKCgo</string>
 					<object class="IBClassDescriptionSource" key="sourceIdentifier">
 						<string key="majorKey">IBProjectSource</string>
 						<string key="minorKey">Classes/AdventureViewController.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/JSON/NSObject+SBJSON.h</string>
+					</object>
+				</object>
+				<object class="IBPartialClassDescription">
+					<string key="className">NSObject</string>
+					<object class="IBClassDescriptionSource" key="sourceIdentifier">
+						<string key="majorKey">IBProjectSource</string>
+						<string key="minorKey">Classes/JSON/SBJsonWriter.h</string>
 					</object>
 				</object>
 				<object class="IBPartialClassDescription">
